# neon-shield

./: .gitignore  GITHUB_SETUP.md  PHASE1_QUICKSTART.md  PHASE2_SESSION_HIJACKING.md  PHASE3_MALWARE_INJECTION.md  PHASE4_PHISHING.md  README.md  README_OLD.md  README_v1.md  ROADMAP.md  SETUP.md  arpspoof.py  ca.py  cleanup.sh  config.py  conftest.py  content_rules.py  control_panel.html  creds_capture.py  daemon.py  dashboard.html  dns_spoof.py  health_monitor.py  iptables_ctl.py  log_handler.py  main_cli.py  malware_injector.py  mitm-intercept.service  neon-shield.service  neon-shield.yml  netdiscover.py  phishing_generator.py  phishing_state.json  proxy.py  pyproject.toml  recon_engine.py  requirements.txt  run_gui.sh  session_hijacker.py  setup_wizard.py  (+4 more)
.github/workflows/: test.yml
config/: mitm-intercept.yml
desktop/src/: App.jsx  ipcConfig.js
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: lib.rs
docs/: ROADMAP.md
docs/archive/: README_OLD.md  README_v1.md
docs/phases/: PHASE2_SESSION_HIJACKING.md  PHASE4_PHISHING.md
gui/: index.html  package-lock.json  package.json
gui/src/: App.css  App.jsx
gui/src-tauri/: tauri.conf.json
scripts/: cleanup.sh  mitm-intercept.service  run_gui.sh
src/core/: state_manager.py
src/modules/: malware_injector.py  phishing_generator.py  wifi_deauth.py
src/networking/: iptables_ctl.py
src/services/: daemon.py  health_monitor.py  setup_wizard.py
src/utils/: content_rules.py  creds_capture.py  log_handler.py  traffic_log.py
tests/: test_config.py
web/: dashboard.html
(+1 files in other folders)
