[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mitm-intercept"
version = "2.0.0"
description = "Advanced MITM Lab for Authorized Security Research"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "scapy>=2.5.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "websockets>=12.0",
]

[project.scripts]
mitm-intercept = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
